# finec

./: .bash_rc  .gitignore  1.txt  CHANGELOG  README.md  app.py  example.ipynb  example.py  forts.py  install.sh  justfile  make.py  package-lock.json  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: .pytest.yml
app/: streamlit_app.py
datasets/: IMOEX_CLOSE.csv  dividend.csv
docs/: conf.py  finec.rst  index.rst
examples/: example.ipynb  example.py  forts.py
finec/: __init__.py  columns.py  directory.py  dividend.py  moex.py  moex2.py  ofdata.py  stock.py  yield_curve.py
hooks/: pyproject.py
tests/: test_dividend.py  test_finec.py  test_moex.py  test_yield_curve.py
