[tool.poetry]
name = "finec"
version = "0.0.1"
description = "Computational finance from Finec MGIMO"
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
apimoex = "^1.2.0"
pandas = "^1.4.2"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
Sphinx = "^3.4.2"
streamlit = "^1.8.1"
myst-parser = "^0.17.1"
pydata-sphinx-theme = "^0.4.1"
ghp-import = "^1.0.0"
pandas = "^1.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
