[tool.poetry]
name = "finec"
version = "0.1.10"
description = "Computational finance from Finec MGIMO"
authors = ["Evgeniy Pogrebnyak <e.pogrebnyak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.13"
apimoex = "^1.2.0"
# lock pandas version for python = "^3.7.13" (for Colab)
pandas = "1.3.5"
requests = "^2.23.0"
folium = "^0.2.1"
pymongo = "^4.1.1"
tqdm = "^4.64.0"
appdirs = "^1.4.4"
httpx = "^0.22.0"
python-dotenv = "^0.20.0"
matplotlib = "^3.5.2"
lxml = "^4.9.1"


[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
#Sphinx = "^3.4.2"
#streamlit = "^1.8.1"
#myst-parser = "^0.17.1"
#pydata-sphinx-theme = "^0.4.1"
#ghp-import = "^1.0.0"
isort = "^5.10.1"
black = "^22.3.0"
streamlit = "^1.8.1"
altair = "^4.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
